# EssexEngineBuildInfrastructure

./: CMakeLists.txt  README.md  doxygen.conf
Modules/: FindCATCH.cmake
